--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "velocity-animate": "^1.4.0",
     "vue": "^2.1.0",
-    "vue-awesome-swiper": "^2.3.0"
+    "vue-awesome-swiper": "^2.3.0",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
