--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^2.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -31,6 +32,8 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "mockjs": "^1.0.1-beta3",
+    "postcss": "^5.2.10",
+    "postcss-plugins-px2rem": "^0.0.5",
     "vue-loader": "^10.0.0",
     "vue-svg-icon": "^1.0.10",
     "vue-template-compiler": "^2.1.0",
