--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "concurrently": "^3.1.0",
     "es6-promise": "^4.0.5",
     "fastclick": "^1.0.6",
@@ -22,22 +23,24 @@
     "postcss-loader": "^1.2.2",
     "postcss-plugin-px2rem": "^0.6.0",
     "velocity-animate": "^1.4.0",
-    "vue": "^2.1.0",
+    "vue": "^2.1.10",
     "vue-awesome-swiper": "^2.3.0",
     "vue-axios": "^1.2.2",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.22.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "mockjs": "^1.0.1-beta3",
     "vue-loader": "^10.0.0",
     "vue-svg-icon": "^1.0.10",
-    "vue-template-compiler": "^2.1.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.9"
   }
