--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuepro",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "孙鑫 <sunxin@Ctrip.com>",
+  "author": "sunxin",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --host 0.0.0.0",
